--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,49 +1,49 @@
 <div class="flex h-screen flex-col justify-center items-center px-6 py-12 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-    <h2 class="mt-10 font-primary text-center text-3xl/9 font-bold tracking-tight text-gray-900">Создайте аккаунт</h2>
+    <h2 class="mt-10 font-primary text-center text-3xl/9 font-bold tracking-tight text-rock-800">Создайте аккаунт</h2>
   </div>
 
   <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
     <%= form_with model: @user, url: users_path, method: :post, local: true, class: "space-y-6" do |form| %>
       <!-- Поле Name -->
       <div>
-        <%= form.label :name, "Имя", class: "block text-sm font-secondary text-secondary-element font-medium text-gray-900" %>
+        <%= form.label :name, "Имя", class: "block text-sm font-secondary text-rock-800 font-medium text-rock-800" %>
         <div class="mt-2">
-          <%= form.text_field :name, placeholder: "Твое имя", class: "block w-full h-12 px-6 font-secondary rounded-full bg-border text-base text-gray-900 placeholder:text-gray-400 focus:outline-none focus:text-teal-600 hover:text-teal-600", required: true %>
+          <%= form.text_field :name, placeholder: "Твое имя...", class: "block w-full h-12 px-6 font-secondary rounded-full bg-rock-100 text-base text-rock-800 placeholder:text-rock-400 focus:outline-none focus:text-accent-600 hover:text-accent-600", required: true %>
         </div>
       </div>
 
       <!-- Поле Email -->
       <div>
-        <%= form.label :email, "Email адрес", class: "block text-sm font-secondary text-secondary-element font-medium text-gray-900" %>
+        <%= form.label :email, "Email адрес", class: "block text-sm font-secondary text-rock-800 font-medium text-rock-800" %>
         <div class="mt-2">
-          <%= form.email_field :email, placeholder: "example@gmail.com", class: "block w-full h-12 px-6 font-secondary rounded-full bg-border text-base text-gray-900 placeholder:text-gray-400 focus:outline-none focus:text-teal-600 hover:text-teal-600", required: true %>
+          <%= form.email_field :email, placeholder: "example@gmail.com", class: "block w-full h-12 px-6 font-secondary rounded-full bg-rock-100 text-base text-rock-800 placeholder:text-rock-400 focus:outline-none focus:text-accent-600 hover:text-accent-600", required: true %>
         </div>
       </div>
 
       <!-- Поле Password -->
       <div>
         <div class="flex items-center justify-between">
-          <%= form.label :password, "Пароль", class: "block text-sm font-secondary text-secondary-element font-medium text-gray-900" %>
+          <%= form.label :password, "Пароль", class: "block text-sm font-secondary text-rock-800 font-medium text-rock-800" %>
         </div>
         <div class="mt-2">
-          <%= form.password_field :password, placeholder: "••••••••", class: "block w-full h-12 px-6 font-secondary rounded-full bg-border text-base text-gray-900 placeholder:text-gray-400 focus:outline-none focus:text-teal-600 hover:text-teal-600", required: true %>
+          <%= form.password_field :password, placeholder: "Придумай пароль...", class: "block w-full h-12 px-6 font-secondary rounded-full bg-rock-100 text-base text-rock-800 placeholder:text-rock-400 focus:outline-none focus:text-accent-600 hover:text-accent-600", required: true %>
         </div>
       </div>
 
       <!-- Поле Password Confirmation -->
       <div>
         <div class="flex items-center justify-between">
-          <%= form.label :password_confirmation, "Повторите пароль", class: "block text-sm font-secondary text-secondary-element font-medium text-gray-900" %>
+          <%= form.label :password_confirmation, "Повторите пароль", class: "block text-sm font-secondary text-rock-800 font-medium text-rock-800" %>
         </div>
         <div class="mt-2">
-          <%= form.password_field :password_confirmation, placeholder: "••••••••", class: "block w-full h-12 px-6 font-secondary rounded-full bg-border text-base text-gray-900 placeholder:text-gray-400 focus:outline-none focus:text-teal-600 hover:text-teal-600", required: true %>
+          <%= form.password_field :password_confirmation, placeholder: "Повтори пароль...", class: "block w-full h-12 px-6 font-secondary rounded-full bg-rock-100 text-base text-rock-800 placeholder:text-rock-400 focus:outline-none focus:text-accent-600 hover:text-accent-600", required: true %>
         </div>
       </div>
 
       <!-- Кнопка Register -->
       <div>
-        <%= form.submit "Зарегистрироваться", class: "flex items-center justify-center noise w-full h-12 px-6 rounded-full bg-primary-element text-lg/6 font-bold text-white shadow-xs hover:bg-teal-400" %>
+        <%= form.submit "Зарегистрироваться", class: "flex items-center justify-center noise w-full h-12 px-6 rounded-full bg-rock-800 text-lg/6 font-bold text-snow shadow-xs hover:bg-accent-600" %>
       </div>
     <% end %>
 
