--- a/app/components/navbar_component.html.erb
+++ b/app/components/navbar_component.html.erb
@@ -12,7 +12,7 @@
         <button class="btn-navbar">Каталог</button>
         <!-- Значек стрелки -->
         <span class="flex items-center ml-1 mt-[2px] w-3 h-3">
-          <%= inline_svg 'icons/arrow-down.svg', id: 'arrow', class: 'flex text-rock-600 transform transition-transform duration-250 ease-in-out' %>
+          <%= inline_svg 'icons/arrow-left.svg', id: 'arrow', class: 'flex text-rock-600 transform transition-transform duration-250 ease-in-out' %>
         </span>
       </div>
 
